# job-auto-apply

./: .env.example  .gitignore  README.md  TECHSPEC.md  pyproject.toml
app/: config.py  db.py  main.py  models.py  schemas.py
app/api/: events.py  jobs.py  pipeline.py  profile.py  runs.py
app/apply/: base.py  greenhouse.py  lever.py  registry.py
app/browser/: context.py  helpers.py
app/llm/: client.py  cover_letter.py  gemini_client.py  scoring.py  screening.py
app/scheduler/: runner.py
app/services/: dedupe.py  events.py  export.py  filters.py  notify.py  pipeline.py  profile.py
app/sources/: base.py  greenhouse.py  lever.py  registry.py
app/ui/: routes.py
app/ui/templates/: base.html  dashboard.html  job_detail.html  jobs.html  profile.html  queue.html  runs.html
profile/: answers.yaml  preferences.yaml  resume.md  skills.md
