[project]
name = "auto-job-apply"
version = "0.1.0"
description = "Local-first auto job apply system"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "sqlalchemy>=2.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "playwright>=1.42",
    "apscheduler>=3.10",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "structlog>=24.1",
    "python-dotenv>=1.0",
    "sse-starlette>=2.0",
    "pypdf>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
